Doc: Fixed links and labels, including equations. Doc: Customized CSS to have equation permalinks visible when hovering the mouse.

--- a/doc/theme/css/custom.css
+++ b/doc/theme/css/custom.css
@@ -34,14 +34,40 @@ img {
 	width: auto;
 }
 
-/* Move equation no to the right */
-.eqno {
-	float: right;
-	margin: 1em 0em;
-}
-
 /* Override Mathjax colors forced to dark grey */
 span[id*="MathJax-Span"] {
 	color: inherit;
+}
+
+/* Move equation no to the right */
+.math .eqno {
+	position: relative;
+	float: right;
+	margin: 1em 0em;
+	z-index: 10;
+}
+
+/* Hide permalinks on equation numbers */
+.section {
+	position: relative
+	z-index: 0;
+}
+
+.math {
+	position: relative;
+	z-index: 1;
+}
+
+.math .MathJax_Display {
+	z-index: 2;
+}
+
+.math .eqno a.headerlink {
+	visibility: hidden;
+	position: absolute;
+}
+
+.math .eqno:hover a.headerlink {
+	visibility: visible;
 }
 
